--- a/frontend/data/listRecipes.css
+++ b/frontend/data/listRecipes.css
@@ -4,6 +4,10 @@
     flex-flow: row nowrap;
 }
 
+.recipe .attribute.ingredients, .recipe .attribute.body {
+    flex-flow: column nowrap;
+}
+
 .recipe .attribute .label {
     padding-right: 4px; 
     font-weight: bold;
@@ -14,4 +18,16 @@
     border:5px solid darkblue;
     flex-flow: column wrap;
     border-radius: 4px;
+}
+
+#recipes-list {
+    display:flex;
+    flex-flow: column wrap;
+    align-items: stretch;
+}
+
+body {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
 }
